# pocket-telegram-reminder

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build.sh  publish.sh  run-example.sh
src/: main.rs
