[package]
name = "pocket-reminder-telegram-bot"
version = "0.2.0"
authors = ["Igor Ramazanov <igor.ramazanov@protonmail.com>"]

[dependencies]
telegram-bot = "0.6"
futures = "0.1.25"
tokio-core = "0.1.17"
reqwest = "0.9.5"
serde_json = "1.0"
serde_derive = "1.0.80"
serde = "1.0.80"
rand = "0.6.1"
timer = "0.2"
time = "0.1.40"
chrono = "0.4.6"
openssl = "0.10.15"
openssl-probe = "0.1.2"